# sunlight

./: .gitignore  README.md  pyproject.toml  requirements.in
.devcontainer/: devcontainer.json
app/: __init__.py  main.py
app/server/: __init__.py  routes.py
app/simulation/: __init__.py  celestial.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: index.html
scripts/: setup_venv.sh
