[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunlight"
version = "0.1.0"
description = "Foundation for atmospheric sunlight scattering simulation and visualization experiments."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sunlight Contributors" }]
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]
